fixed overflow on smaller screens

--- a/src/Index.css
+++ b/src/Index.css
@@ -134,3 +134,17 @@
       grid-template-columns: 1fr 1fr;
   }
 }
+
+@media screen and (max-width: 475px){
+  .section__inputs {
+    flex-direction: column;
+  }
+
+  .section__inputs>button {
+    margin-top: 10px;
+  }
+
+  * {
+    overflow: scroll;
+  }
+}
